--- a/app/assets/stylesheets/projects.css
+++ b/app/assets/stylesheets/projects.css
@@ -31,7 +31,7 @@
   margin: 5px 0px 5px 0;
   float:left;
 }
-#projectlist {width: 1100px;min-height:73px;}
+#projectlist {width: 1110px;min-height:73px;}
 #projectlist a{;width: 90px;height: 63px;}
 #projectlist a img{
 	opacity: 0.8;
@@ -42,7 +42,7 @@
 	/*Reflection*/
 	-webkit-box-reflect: below 0px -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(.7, transparent), to(rgba(0,0,0,0.1)));
 }
-.projectspacer{width:22px;height: 63px;float:left;margin:5px 0;}
+.projectspacer{width:23.2px;height: 63px;float:left;margin:5px 0;}
 #projectlist a:hover{background-color: white; } 
 #projectlist img:hover {  
    opacity: 1;
